--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
 
     <body style="background-color: rgb(211, 211, 211);">
         <div>
-            <h1 style="font-family: 'Monoton', cursive;">HackerNews Top 15</h1>
+            <h1 style="font-family: 'Monoton', cursive;">HackerNews - 100+ votes news</h1>
             <ol style="font-family: 'Gentium Book Basic', serif; font-size: 1.5rem;"> {{ html|safe }} </ol>
         </div>
     </body>
