--- a/templates/home.html
+++ b/templates/home.html
@@ -1,49 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <style>
-            ol {
-                counter-reset: my-awesome-counter;
-                list-style: none;
-                padding-left: 40px;
-            }
-            ol li {
-                margin: 0 0 0.5rem 0;
-                counter-increment: my-awesome-counter;
-                position: relative;
-            }
-            ol li::before {
-                content: counter(my-awesome-counter);
-                color: #fcd000;
-                font-size: 1.5rem;
-                font-weight: bold;
-                position: absolute;
-                --size: 32px;
-                left: calc(-1 * var(--size) - 10px);
-                line-height: var(--size);
-                width: var(--size);
-                height: var(--size);
-                top: 0;
-                transform: rotate(-10deg);
-                background: black;
-                border-radius: 50%;
-                text-align: center;
-                box-shadow: 1px 1px 0 #999;
-            }
             body {
                 background: #191919;
                 line-height: 1.4;
                 margin: 2rem;
             }    
         </style>
-        <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nova+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Monofett&display=swap" rel="stylesheet">
     </head>
 
     <body style="background-color: rgb(211, 211, 211);">
         <div>
-            <h1 style="font-family: 'Monoton', cursive;">HackerNews - 100+ votes news</h1>
-            <ol style="font-family: 'Gentium Book Basic', serif; font-size: 1.5rem;"> {{ html|safe }} </ol>
+            <h1 style="font-family: 'Monofett', cursive; font-size:75px;">HackerNews 100+ votes</h1>
+            <ol style="font-family: 'Nova Mono', monospace; font-size: 1.5rem;"> {{ html|safe }} </ol>
         </div>
     </body>
 </html>
